Added journal form

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div [ngStyle]="{'background' : 'radial-gradient(at ' + left + '% ' + top + '%, #FFF2F4, #FCFFE9)'}" class="welcome">
+<div [ngStyle]="{'background' : 'radial-gradient(at ' + left + '% ' + top + '%, #FFF2F4, #FCFFE9)'}" class="home">
   <div class="box" (click)="onClick()">
-    <h1 class="fade-left display-1 font-weight-lighter">Hello</h1>
-    <h1 class="fade-right">Welcome to stopbeingphony.com</h1>
+    <h1 class="hello fade-left display-1 font-weight-lighter">Hello</h1>
+    <h1 class="welcome fade-right">Welcome to stopbeingphony.com</h1>
   </div>
 </div>
