--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -1,7 +1,6 @@
 // app.component.scss
-@import src/styles.sass
 
-.welcome
+.home
   background: radial-gradient(at center, #FFF2F4, #FCFFE9)
   height: 100vh
 
@@ -97,3 +96,9 @@ h1
   100%
     opacity: 1
     transform: translateX(0)
+
+@media screen and ( max-width: 768px )
+  .hello
+    font-size: 3rem
+  .welcome
+    font-size: 1.5rem
