--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -8,33 +8,42 @@
   <div class="container">
     <h1 class="text-white text-center">How can I help you today?</h1>
     <div class="row">
-      <div class="col-4">
-        <div class="card card-1" routerLink="/learn">
+      <div class="col-12 col-md-4">
+        <div class="card card-1">
           <div class="card__side card__side--front">
             <div class="card__side--front--text">Learn</div>
           </div>
-          <div class="card__side card__side--back card__side--back-1">
+          <div
+            class="card__side card__side--back card__side--back-1"
+            routerLink="/learn"
+          >
             <fa-icon class="school" [icon]="faSchool"></fa-icon>
           </div>
         </div>
       </div>
-      <div class="col-4">
-        <div class="card card-2" routerLink="/journal">
+      <div class="col-12 col-md-4">
+        <div class="card card-2">
           <div class="card__side card__side--front">
             <div class="card__side--front--text">Journal</div>
           </div>
-          <div class="card__side card__side--back card__side--back-2">
-              <fa-icon class="book" [icon]="faBook"></fa-icon>
+          <div
+            class="card__side card__side--back card__side--back-2"
+            routerLink="/journal"
+          >
+            <fa-icon class="book" [icon]="faBook"></fa-icon>
           </div>
         </div>
       </div>
-      <div class="col-4">
-        <div class="card card-3" routerLink="/exercise">
+      <div class="col-12 col-md-4">
+        <div class="card card-3">
           <div class="card__side card__side--front">
             <div class="card__side--front--text">Exercise</div>
           </div>
-          <div class="card__side card__side--back card__side--back-3">
-              <fa-icon class="dumbell" [icon]="faDumbbell"></fa-icon>
+          <div
+            class="card__side card__side--back card__side--back-3"
+            routerLink="/exercise"
+          >
+            <fa-icon class="dumbell" [icon]="faDumbbell"></fa-icon>
           </div>
         </div>
       </div>
