--- a/src/app/intro/intro.component.sass
+++ b/src/app/intro/intro.component.sass
@@ -105,7 +105,7 @@ h1
     100%
       opacity: 1
 
-@media screen and ( max-width: 765px)
+@media screen and ( max-width: 992px)
   .card
     height: 10rem
 
@@ -116,6 +116,7 @@ h1
           font-size: 2rem
   h1
     font-size: 1.5rem
+    margin-bottom: 1.5rem
 
   .school, .dumbell, .book
     font-size: 3rem
