--- a/src/app/journal/journal-form/journal-form.component.sass
+++ b/src/app/journal/journal-form/journal-form.component.sass
@@ -20,7 +20,6 @@ button
   &:disabled
     background-color: #fff !important
 
-
 .question
   margin-bottom: 5rem
   animation: fade-down 2s forwards
@@ -39,25 +38,25 @@ h1
 
 @keyframes fade-down
   0%
-   transform: translateY(-3rem)
-   opacity: 0
+    transform: translateY(-3rem)
+    opacity: 0
   100%
     opacity: 1
 
 @keyframes fade-up
   0%
-   transform: translateY(3rem)
-   opacity: 0
+    transform: translateY(3rem)
+    opacity: 0
   100%
     opacity: 1
 
 @keyframes fade-in
   0%
-   opacity: 0
+    opacity: 0
   100%
     opacity: 1
 
-//Hour Input Forms
+//Time Input Forms
 
 input[type="number"]
   -webkit-appearance: textfield
@@ -87,7 +86,6 @@ input
   height: 100px
   width: 150px
 
-
 .plus
   position: absolute
   top: 0
@@ -104,7 +102,7 @@ input
   border: none
   box-shadow: 0 1px 1px rgba(0, 0, 0, .15)
   &:focus
-     outline: none
+    outline: none
 
 .minus
   border-radius: 10px
@@ -122,7 +120,7 @@ input
   border: none
   box-shadow: 0 1px 1px rgba(0, 0, 0, .15)
   &:focus
-     outline: none
+    outline: none
 
 //Mood Input Forms
 
@@ -148,15 +146,11 @@ input[type="radio"]
   &-active
     background-color: #e7f8fe
 
-
-
 .mood:hover
   background-color: #e7f8fe
 
-
 input[type="radio"]:checked + .mood
   background-color: #e7f8fe
-
 
 //textarea
 
@@ -188,7 +182,7 @@ textarea
   display: flex
   flex-direction: column
   align-items: center
-  justify-content: center
+  justify-content: space-evenly
   font-size: 2rem
   width: 100%
   height: 9rem
@@ -198,7 +192,7 @@ textarea
 
 .confirm-note
   font-size: 1rem
-  padding: 1rem
+  adding: 1rem 0 1rem 0
   width: 100%
   height: 9rem
   background-color: white
@@ -208,3 +202,51 @@ textarea
   word-wrap: break-word
   overflow: auto
 
+@media screen and ( max-width:1000px)
+  h1
+    font-size: 2rem
+  .question
+    margin-bottom: 2rem
+  .question-control
+    margin-bottom: 2rem
+  .hours
+    height: 80px
+    width: 130px
+  input
+    height: 100%
+    width: 80px
+    border-radius: 20px
+  .plus
+    height: 35px
+    width: 35px
+    transform: translate(-100%, 10%)
+  .minus
+    height: 35px
+    width: 35px
+    transform: translate(-100%, -110%)
+  .mood
+    font-size: 3rem
+    border-radius: 10px
+    height: 5rem
+    width: 5rem
+  .confirm-time
+    flex-direction: row
+    align-items: center
+    justify-content: space-evenly
+    height: 5rem
+    width: 5rem !important
+    margin-bottom: 1rem
+  .confirm-icon
+    font-size: 2rem
+    border-radius: 10px
+    height: 5rem
+    width: 5rem
+    margin-bottom: 1rem
+  .confirm-note
+    width: 5rem !important
+    height: 5rem
+    font-size: 1rem
+  p
+    font-size: 1rem
+  button
+    margin-bottom: 1rem !important
