Added navigation menu

--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -4,6 +4,13 @@
   background: radial-gradient(at center, #FFF2F4, #FCFFE9)
   height: 100vh
 
+button
+  background: transparent
+  border: none
+
+  &:focus
+    outline: none
+
 .box
   cursor: pointer
   display: flex
