--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div
   [ngStyle]="{
     background:
@@ -37,13 +38,13 @@
       <div class="col-12 col-md-4">
         <div class="card card-3">
           <div class="card__side card__side--front">
-            <div class="card__side--front--text">Exercise</div>
+            <div class="card__side--front--text">Profile</div>
           </div>
           <div
             class="card__side card__side--back card__side--back-3"
-            routerLink="/exercise"
+            routerLink="/profile"
           >
-            <fa-icon class="dumbell" [icon]="faDumbbell"></fa-icon>
+            <fa-icon class="dumbell" [icon]="faUser"></fa-icon>
           </div>
         </div>
       </div>
