--- a/src/app/journal/journal-form/journal-form.component.sass
+++ b/src/app/journal/journal-form/journal-form.component.sass
@@ -213,6 +213,7 @@ textarea
     height: 80px
     width: 130px
   input
+    font-size: 2rem
     height: 100%
     width: 80px
     border-radius: 20px
@@ -250,3 +251,6 @@ textarea
     font-size: 1rem
   button
     margin-bottom: 1rem !important
+
+  textarea
+    width: 15rem
