--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div [ngStyle]="{'background' : 'radial-gradient(at ' + left + '% ' + top + '%, #FFF2F4, #FCFFE9)'}" class="home">
-  <div class="box" (click)="onClick()">
+  <button class="box" routerLink="/home">
     <h1 class="hello fade-left display-1 font-weight-lighter">Hello</h1>
-    <h1 class="welcome fade-right">Welcome to stopbeingphony.com</h1>
-  </div>
+    <h1 class="welcome fade-right text-left">Welcome to stopbeingphony.com</h1>
+  </button>
 </div>
