Added journal entry service and model

--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -10,39 +10,37 @@
     <h1 class="text-white text-center">How can I help you today?</h1>
     <div class="row">
       <div class="col-12 col-md-4">
-        <div class="card card-1">
+        <div class="card card-1" routerLink="/learn">
           <div class="card__side card__side--front">
             <div class="card__side--front--text">Learn</div>
           </div>
           <div
             class="card__side card__side--back card__side--back-1"
-            routerLink="/learn"
           >
             <fa-icon class="school" [icon]="faSchool"></fa-icon>
           </div>
         </div>
       </div>
       <div class="col-12 col-md-4">
-        <div class="card card-2">
+        <div class="card card-2" routerLink="/journal">
           <div class="card__side card__side--front">
             <div class="card__side--front--text">Journal</div>
           </div>
           <div
             class="card__side card__side--back card__side--back-2"
-            routerLink="/journal"
           >
             <fa-icon class="book" [icon]="faBook"></fa-icon>
           </div>
         </div>
       </div>
       <div class="col-12 col-md-4">
-        <div class="card card-3">
+        <div class="card card-3" routerLink="/profile">
           <div class="card__side card__side--front">
             <div class="card__side--front--text">Profile</div>
           </div>
           <div
             class="card__side card__side--back card__side--back-3"
-            routerLink="/profile"
+
           >
             <fa-icon class="dumbell" [icon]="faUser"></fa-icon>
           </div>
