--- a/src/app/intro/intro.component.sass
+++ b/src/app/intro/intro.component.sass
@@ -113,9 +113,15 @@ h1
       &--front
         &--text
           font-size: 2rem
+    &:hover &__side--front
+      transform: rotateY(0deg)
+    &:hover &__side--back
+      transform: rotateY(-180deg)
   h1
     font-size: 1.5rem
     margin-bottom: 1.5rem
 
   .school, .dumbell, .book
     font-size: 3rem
+
+
