--- a/src/app/journal/journal-form/journal-form.component.html
+++ b/src/app/journal/journal-form/journal-form.component.html
@@ -199,7 +199,7 @@
           </div>
         </div>
         <div class="col-12 col-lg-3 confirm-note">
-          Message: {{ journalEntry.get("note").value }}
+          Note: {{ journalEntry.get("note").value }}
         </div>
       </div>
     </div>
