added profile page and charts.Js to display data by weeks

--- a/src/app/journal/journal-form/journal-form.component.html
+++ b/src/app/journal/journal-form/journal-form.component.html
@@ -233,6 +233,7 @@
       >
         Submit
       </button>
+      <p *ngIf="alreadySubmitted">Journal already entered on this day</p>
     </div>
   </form>
 </div>
