--- a/src/app/profile/profile-data/profile-data.component.html
+++ b/src/app/profile/profile-data/profile-data.component.html
@@ -1,47 +1,143 @@
 <p *ngIf="!noJournals">No Journal Entries</p>
-<div class="chart-wrapper mx-auto" style="width: 50%; padding-top: 5rem;">
-  <h1 class="text-center">Your Data</h1>
-  <canvas
-    baseChart
-    [datasets]="lineChartData"
-    [labels]="lineChartLabels"
-    [options]="lineChartOptions"
-    [colors]="lineChartColors"
-    [legend]="lineChartLegend"
-    [chartType]="lineChartType"
-    [plugins]="lineChartPlugins"
-  >
-  </canvas>
-  <h3 class="text-center">{{ currentSunday | date: "shortDate" }}</h3>
+<div class="chart-wrapper mx-auto" style="padding-top: 5rem;">
+  <h1 class="text-center">Your Data in {{ currentSunday.getFullYear() }}</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-4">
+        <canvas
+          baseChart
+          [datasets]="hourYearData"
+          [labels]="barChartLabels"
+          [options]="barChartOptions"
+          [legend]="barChartLegend"
+          [chartType]="barChartType"
+          [colors]="hoursColors"
+        >
+        </canvas>
+      </div>
+      <div class="col-12 col-md-4">
+        <canvas
+          baseChart
+          [datasets]="moodYearData"
+          [labels]="barChartLabels"
+          [options]="barChartOptions"
+          [legend]="barChartLegend"
+          [chartType]="barChartType"
+          [colors]="moodColors"
+          [options]="moodOptions"
+        >
+        </canvas>
+      </div>
+      <div class="col-12 col-md-4">
+        <canvas
+          baseChart
+          [datasets]="focusYearData"
+          [labels]="barChartLabels"
+          [options]="barChartOptions"
+          [legend]="barChartLegend"
+          [chartType]="barChartType"
+          [colors]="focusColors"
+          [options]="focusOptions"
+        >
+        </canvas>
+      </div>
+      <div class="col-12">
+        <h3 class="text-center my-4">
+          Week of {{ currentSunday | date: "shortDate" }}
+        </h3>
+      </div>
+      <div class="col-12 col-md-4">
+        <canvas
+          baseChart
+          [datasets]="lineChartData"
+          [labels]="lineChartLabels"
+          [options]="hoursOptions"
+          [colors]="hoursColors"
+          [legend]="lineChartLegend"
+          [chartType]="lineChartType"
+          [plugins]="lineChartPlugins"
+        >
+        </canvas>
+      </div>
+      <div class="col-12 col-md-4">
+        <canvas
+          baseChart
+          [datasets]="moodData"
+          [labels]="lineChartLabels"
+          [options]="moodOptions"
+          [colors]="moodColors"
+          [legend]="lineChartLegend"
+          [chartType]="lineChartType"
+          [plugins]="lineChartPlugins"
+        >
+        </canvas>
+      </div>
+      <div class="col-12 col-md-4">
+        <canvas
+          baseChart
+          [datasets]="focusData"
+          [labels]="lineChartLabels"
+          [options]="focusOptions"
+          [colors]="focusColors"
+          [legend]="lineChartLegend"
+          [chartType]="lineChartType"
+          [plugins]="lineChartPlugins"
+        >
+        </canvas>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="text-center mt-4">
+<!-- <div class="text-center mt-4">
   <button class="btn btn-light mx-2">
     Year
   </button>
   <button class="btn btn-light mx-2">Month</button>
   <button class="btn btn-light mx-2">Week</button>
-</div>
+</div> -->
 <div class="text-center mt-4">
   <button class="btn btn-light mx-2" (click)="prevSunday()">
     Previous Week
   </button>
   <button class="btn btn-light mx-2" (click)="nextSunday()">Next Week</button>
 </div>
+<!-- <div class="text-center mt-4">
+  <button
+    class="btn btn-light mx-2"
+    [class.active]="view == 'hours'"
+    (click)="switchGraph('hours')"
+  >
+    Hours
+  </button>
+  <button
+    class="btn btn-light mx-2"
+    [class.active]="view == 'mood'"
+    (click)="switchGraph('mood')"
+  >
+    Mood
+  </button>
+  <button
+    class="btn btn-light mx-2"
+    [class.active]="view == 'focus'"
+    (click)="switchGraph('focus')"
+  >
+    Focus
+  </button>
+</div> -->
 
 <div class="container text-center mt-4">
   <p *ngIf="notes.length > 0">Notes from this week</p>
-  <p *ngIf="notes.length == 0">No notes this week</p>
+  <p *ngIf="notes.length == 0">No notes from this week</p>
   <div class="row">
     <div
-      class="col-4 mb-4"
+      class="col-12 col-md-4 mb-4"
       *ngFor="let note of notes; let i = index"
       [ngStyle]="{ display: note ? 'inline' : 'none' }"
     >
-    <div style="background-color: white; border-radius: 20px; padding: 20px;">
-      <p class="lead">{{ weeks[i] }}</p>
-      <p>{{ note }}</p>
-    </div>
+      <div style="background-color: white; border-radius: 20px; padding: 20px;">
+        <p class="lead">{{ weeks[i] }}</p>
+        <p>{{ note }}</p>
+      </div>
     </div>
   </div>
 </div>
-<div style="height: 10rem;"></div>
