--- a/src/app/profile/profile.component.sass
+++ b/src/app/profile/profile.component.sass
@@ -1,4 +1,4 @@
 .exercise
   // padding-bottom: 10rem
-  // background: radial-gradient(at center, #dbf5fa, #CDEDF6 )
-  background-color: #CDEDF6
+  background: radial-gradient(at center, #dbf5fa, #CDEDF6 )
+  min-height: 100vh
