Started working on learn page

--- a/src/app/learn/learn.component.html
+++ b/src/app/learn/learn.component.html
@@ -6,3 +6,12 @@
   }"
   class="learn"
 >
+  <div class="container">
+    <h1 class="text-center fact-title">Fact Title</h1>
+    <p class="lead text-center fact-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum soluta doloribus eligendi, tempora voluptatem magnam quibusdam at tenetur amet laudantium officiis assumenda nihil similique temporibus culpa porro sequi nobis nostrum! Eum aperiam qui et quis quos tenetur autem illum at nostrum voluptatum. Blanditiis quibusdam mollitia consequatur perferendis accusamus quos cumque?</p>
+    <div class="button-control">
+      <button>Previous Fact</button>
+      <button>Next Fact</button>
+    </div>
+  </div>
+</div>
