--- a/src/app/learn/learn.component.sass
+++ b/src/app/learn/learn.component.sass
@@ -1,3 +1,15 @@
 .learn
   height: 100vh
   background: radial-gradient(at center, #d3fad7 , #bef9be)
+
+.container
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+  text-align: center
+
+h1
+  margin-bottom: 5rem
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, .15)
+  // animation: fade-text-in 2s forwards
