--- a/src/app/learn/learn.component.sass
+++ b/src/app/learn/learn.component.sass
@@ -9,7 +9,37 @@
   transform: translate(-50%, -50%)
   text-align: center
 
-h1
+.fact-title
   margin-bottom: 5rem
   text-shadow: 0px 2px 2px rgba(0, 0, 0, .15)
-  // animation: fade-text-in 2s forwards
+  animation: fade-fact-in 2s forwards
+
+.fact-info
+  margin-bottom: 4rem
+  animation: fade-fact-in 2s forwards
+
+.button-control
+  animation: fade-fact-in 2s forwards
+
+.control-button
+  height: 4rem
+  width: 4rem
+  font-size: 1.5rem
+  background-color: #ffffff
+  border: none
+  border-radius: 1rem
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, .15)
+  margin: 1rem
+  outline: none
+  transition: .3s
+  overflow: hidden
+
+  &:hover
+    transform: scale(.9) !important
+
+@keyframes fade-fact-in
+  0%
+    opacity: 0
+  100%
+    opacity: 1
+
